[tool.poetry]
name = "negaposi"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
mecab-python3 = "^1.0.6"
cabocha-python = "^0.69.3"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
