[tool.poetry]
name = "negaposi"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
pymlask = "^0.3.2"
pandas = "^2.1.0"
mecab-python3 = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
